// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heptapod basic 1`] = `
.glamor-0 {
  font-size: 16px;
  background: rgba(45,213,47,0.11);
  color: aquamarine;
}

@media (min-width:420px) {
  .glamor-0 {
    background-color: hotpink;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    font-size: 16px;
    background: rgba(0,0,0,0.11);
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`heptapod basic 2`] = `
".css-zkome7 {
  font-size: 16px;
  background: rgba(45,213,47,0.11);
  color: aquamarine;
}

.css-txi5oi {
  background-color: hotpink;
}

.css-126my4u {
  font-size: 16px;
  background: rgba(0,0,0,0.11);
}

.css-1u159q8 {
  font-size: 16px;
  background: rgba(45,213,47,0.11);
  color: aquamarine;
}

@media (min-width:420px) {
  .css-1u159q8 {
    background-color: hotpink;
  }
}

@media (min-width:920px) {
  .css-1u159q8 {
    font-size: 16px;
    background: rgba(0,0,0,0.11);
  }
}"
`;
